--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "lab -c",
-    "lint": "eslint index.js lib test"
+    "lint": "eslint index.js lib test examples tools"
   },
   "engines": {
     "node": "4.*"
