--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,15 @@
         "eol-last": [2],
         "eqeqeq": [2],
         "indent": [2, 2, {"SwitchCase": 1}],
+        "keyword-spacing": [2],
         "max-len": [2, 120, 4, {"ignoreComments": true, "ignoreUrls": true}],
         "no-shadow": [1],
         "no-trailing-spaces": [2],
         "no-unused-vars": [2],
         "quotes": [2,"single"],
         "semi": [2, "always"],
-        "space-after-keywords": [2],
+        
+        
         "space-before-function-paren": [2,  {"anonymous": "always", "named": "never"}],
         "space-infix-ops": [2],
         "space-unary-ops": [2]
@@ -19,8 +21,7 @@
     "env": {
         "node": true
     },
-    "ecmaFeatures": {
-        blockBindings: true
-    },
+    
+   
     "extends": "eslint:recommended"
 }
