--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "lab -c",
     "lint": "eslint index.js lib test examples tools"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kmpm/node-sl2format.git"
+  },
   "engines": {
     "node": "4.*"
   },
@@ -18,9 +22,10 @@
   "author": "Peter Magnusson <peter@birchroad.net>",
   "license": "MIT",
   "devDependencies": {
-    "code": "^1.5.0",
-    "eslint": "^1.6.0",
-    "lab": "^6.1.0",
+    "bluebird": "^3.3.1",
+    "code": "^2.1.0",
+    "eslint": "^2.1.0",
+    "lab": "^8.2.0",
     "through2": "^2.0.0"
   },
   "dependencies": {
